Fixed layout issues, and minor style changes
Changed #content max width to 60em and centralised on the page
Set footer to clear:both
Changed RSS icon to an orange colour
Reduced icons in footer and tidied it up

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -77,7 +77,7 @@ td {padding: 10px;background: #ccc;}
 #secondary-content,
 #page-footer {width: 100%;-moz-box-sizing: border-box;-webkit-box-sizing: border-box;
     box-sizing: border-box;}
-#content{max-width:1140px;}
+#content{max-width:60em;margin:0 auto;}
 #main-content article, #secondary-content aside {padding: 0.5em 1em;}
 
 
@@ -118,10 +118,11 @@ td {padding: 10px;background: #ccc;}
 
 
 
-#page-footer {text-align: center;}
+#page-footer {clear:both;text-align: center;}
 #page-footer .social {padding:10px 0;}
 #page-footer .social a {filter:alpha(opacity=30);opacity: 0.3;}
 #page-footer .social a:hover {filter:alpha(opacity=100);opacity: 1;}
+#page-footer .social .feed {color:#ff8728;}
 
 
 
